--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "nextjs-shopify",
   "version": "1.0.0",
+  "engines": {
+    "node": "18.14.0"
+  },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "analyze": "BUNDLE_ANALYZE=both yarn build",
     "find:unused": "next-unused",
     "prettier": "prettier"
@@ -59,9 +62,11 @@
     "@types/shopify-buy": "2.10.3",
     "@types/traverse": "0.6.32",
     "cheerio": "1.0.0-rc.12",
+    "isolated-vm": "^4.7.2",
     "js-cookie": "3.0.1",
     "next": "13.1.6",
     "next-seo": "5.15.0",
+    "node": "18.14.0",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
