--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "node": "18.14.0"
   },
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next -p 8080",
     "build": "next build",
-    "start": "next start -p 8080",
+    "start": "next -p 8080",
     "analyze": "BUNDLE_ANALYZE=both yarn build",
     "find:unused": "next-unused",
     "prettier": "prettier"
