cap nhat settings + lam do carousel

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
-  "editor.tabSize": 1,
+  "editor.tabSize": 4,
   "prettier.useTabs": true,
   "vetur.format.options.useTabs": true,
-  "vetur.format.options.tabSize": 1,
-  "prettier.tabWidth": 1
+  "vetur.format.options.tabSize": 4,
+"prettier.tabWidth": 4,
+"workbench.tree.indent": 4
 }
