--- a/package.json
+++ b/package.json
@@ -66,12 +66,13 @@
     "js-cookie": "3.0.1",
     "next": "13.1.6",
     "next-seo": "5.15.0",
-    "node": "18.14.0",
+    "npm": "^10.5.2",
     "pure-react-carousel": "^1.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-spring": "^9.6.1",
     "shopify-buy": "^2.16.1",
+    "stable": "^0.1.8",
     "theme-ui": "0.15.5",
     "traverse": "0.6.7"
   },
