--- a/package.json
+++ b/package.json
@@ -81,6 +81,8 @@
     "@types/js-cookie": "3.0.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
+    "@types/react-dom": "^18.2.25",
+    "encoding": "^0.1.13",
     "jest": "29.4.3",
     "next-unused": "0.0.6",
     "postcss-flexbugs-fixes": "5.0.2",
