--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "@radix-ui/react-dialog": "^1.0.2",
     "@reach/dialog": "^0.18.0",
     "@reach/portal": "0.14.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@theme-ui/components": "0.15.5",
     "@theme-ui/match-media": "0.15.5",
     "@theme-ui/preset-base": "0.15.5",
