--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "@reach/portal": "0.14.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^3.4.4",
+    "@swc/helpers": "^0.5.12",
     "@theme-ui/components": "0.15.5",
     "@theme-ui/match-media": "0.15.5",
     "@theme-ui/preset-base": "0.15.5",
@@ -70,8 +72,9 @@
     "next-seo": "5.15.0",
     "npm": "^10.5.2",
     "pure-react-carousel": "^1.30.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-pdf": "^9.1.0",
     "react-spring": "^9.6.1",
     "sass": "^1.75.0",
     "shopify-buy": "^2.16.1",
