--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-viewer": "^1.2.1",
     "react-pdf": "^9.1.0",
     "react-spring": "^9.6.1",
     "sass": "^1.75.0",
