--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@builder.io/utils": "1.1.10",
     "@builder.io/widgets": "1.2.24",
     "@emotion/react": "^11.10.6",
+    "@mikecousins/react-pdf": "^7.1.0",
     "@netlify/plugin-nextjs": "4.30.4",
     "@radix-ui/react-dialog": "^1.0.2",
     "@reach/dialog": "^0.18.0",
@@ -68,13 +69,12 @@
     "@types/traverse": "0.6.32",
     "cheerio": "1.0.0-rc.12",
     "js-cookie": "3.0.1",
-    "next": "13.1.6",
+    "next": "^13.5.6",
     "next-seo": "5.15.0",
     "npm": "^10.5.2",
     "pure-react-carousel": "^1.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-file-viewer": "^1.2.1",
     "react-pdf": "^9.1.0",
     "react-spring": "^9.6.1",
     "sass": "^1.75.0",
@@ -89,11 +89,14 @@
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "^18.2.25",
+    "custom-error": "^0.2.1",
     "encoding": "^0.1.13",
     "jest": "29.4.3",
+    "logging-library": "^0.5.0",
     "next-unused": "0.0.6",
     "postcss-flexbugs-fixes": "5.0.2",
     "prettier": "2.8.4",
+    "react-file-viewer": "^0.3.1",
     "typescript": "4.9.5"
   },
   "license": "MIT"
