added pfp banner

--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@theme-ui/presets": "0.15.5",
     "@types/shopify-buy": "2.10.3",
     "@types/traverse": "0.6.32",
+    "antd": "^5.22.4",
+    "bootstrap": "^5.3.3",
     "cheerio": "1.0.0-rc.12",
     "js-cookie": "3.0.1",
     "next": "^13.5.6",
