--- a/package.json
+++ b/package.json
@@ -51,16 +51,21 @@
     "@builder.io/react": "^3.1.1",
     "@builder.io/utils": "1.1.10",
     "@builder.io/widgets": "1.2.24",
+    "@easy-shadcn/utils": "^0.0.2",
     "@emotion/react": "^11.10.6",
     "@mikecousins/react-pdf": "^7.1.0",
     "@netlify/plugin-nextjs": "4.30.4",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-slot": "^1.2.0",
     "@reach/dialog": "^0.18.0",
     "@reach/portal": "0.14.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
     "@swc/helpers": "^0.5.12",
+    "@tailwindcss/postcss": "^4.1.3",
+    "@tailwindcss/vite": "^4.1.3",
     "@theme-ui/components": "0.15.5",
     "@theme-ui/match-media": "0.15.5",
     "@theme-ui/preset-base": "0.15.5",
@@ -70,7 +75,11 @@
     "antd": "^5.22.4",
     "bootstrap": "^5.3.3",
     "cheerio": "1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.6.0",
     "js-cookie": "3.0.1",
+    "lucide-react": "^0.488.0",
     "next": "^13.5.6",
     "next-seo": "5.15.0",
     "npm": "^10.5.2",
@@ -83,8 +92,10 @@
     "sass": "^1.75.0",
     "shopify-buy": "^2.16.1",
     "stable": "^0.1.8",
+    "tailwind-merge": "^3.2.0",
     "theme-ui": "0.15.5",
-    "traverse": "0.6.7"
+    "traverse": "0.6.7",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "13.1.6",
@@ -92,14 +103,17 @@
     "@types/node": "18.17.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "^18.2.25",
+    "autoprefixer": "^10.4.21",
     "custom-error": "^0.2.1",
     "encoding": "^0.1.13",
     "jest": "29.4.3",
     "logging-library": "^0.5.0",
     "next-unused": "0.0.6",
+    "postcss": "^8.5.3",
     "postcss-flexbugs-fixes": "5.0.2",
     "prettier": "2.8.4",
     "react-file-viewer": "^0.3.1",
+    "tailwindcss": "^4.1.3",
     "typescript": "4.9.5"
   },
   "license": "MIT"
