--- a/package.json
+++ b/package.json
@@ -52,10 +52,14 @@
     "@builder.io/utils": "1.1.10",
     "@builder.io/widgets": "1.2.24",
     "@easy-shadcn/utils": "^0.0.2",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.6",
     "@emotion/react": "^11.10.6",
     "@mikecousins/react-pdf": "^7.1.0",
     "@netlify/plugin-nextjs": "4.30.4",
     "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-label": "^2.1.3",
     "@radix-ui/react-navigation-menu": "^1.2.6",
     "@radix-ui/react-slot": "^1.2.0",
     "@reach/dialog": "^0.18.0",
