--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "pure-react-carousel": "^1.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-editor-js": "^2.1.0",
     "react-pdf": "^9.1.0",
     "react-spring": "^9.6.1",
     "sass": "^1.75.0",
@@ -102,6 +103,20 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/embed": "^2.7.6",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/simple-image": "^1.6.0",
+    "@editorjs/table": "^2.4.4",
+    "@editorjs/warning": "^1.4.1",
     "@next/bundle-analyzer": "13.1.6",
     "@types/js-cookie": "3.0.3",
     "@types/node": "18.17.0",
